changed default GC and mem settings, and the way ownership of dirs is done.